# rust-dice

./: .travis.yml  Cargo.toml  README.md
src/: main.rs
