[package]
name = "rust-dice"
description = "A simple CLI program that simulates dice. Written in Rust."
repository = "https://github.com/user6553591/rust-dice"
version = "0.2.0"
authors = ["user6553591 </u/user6553591>"]
readme = "README.md"
license = "GPL-3.0"

[dependencies]
rand = "0.3"
clap = "2.20.0"

[profile.release]
lto = true
